# sqlite3_arabic_phonetic_fuzzy_trigram_flutter

./: LICENSE  README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/jni/: Android.mk  sqlite3-arabic-phonetic-fuzzy-trigram.c
android/src/main/kotlin/com/greentechapps/sqlite3_arabic_phonetic_fuzzy_trigram_flutter/: Sqlite3ArabicPhoneticFuzzyTrigramFlutterPlugin.kt
android/src/test/kotlin/com/greentechapps/sqlite3_arabic_phonetic_fuzzy_trigram_flutter/: Sqlite3ArabicPhoneticFuzzyTrigramFlutterPluginTest.kt
example/: README.md  pubspec.yaml
example/android/: build.gradle.kts
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/greentechapps/sqlite3_arabic_phonetic_fuzzy_trigram_flutter_example/: MainActivity.kt
example/ios/: Podfile
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/ios/RunnerTests/: RunnerTests.swift
example/lib/: main.dart
example/lib/model/: content.dart
example/lib/provider/: app_provider.dart
example/lib/repository/: app_database.dart
example/lib/util/: util.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/: Podfile
example/macos/Flutter/: GeneratedPluginRegistrant.swift
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
example/macos/Runner/Configs/: AppInfo.xcconfig
example/macos/RunnerTests/: RunnerTests.swift
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: sqlite3_arabic_phonetic_fuzzy_trigram_flutter.podspec
ios/Classes/: Sqlite3ArabicPhoneticFuzzyTrigramFlutterPlugin.swift
lib/: sqlite3_arabic_phonetic_fuzzy_trigram_flutter.dart  sqlite3_arabic_phonetic_fuzzy_trigram_flutter_method_channel.dart  sqlite3_arabic_phonetic_fuzzy_trigram_flutter_platform_interface.dart
linux/: CMakeLists.txt  sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin.cc  sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin_private.h
linux/include/sqlite3_arabic_phonetic_fuzzy_trigram_flutter/: sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin.h
linux/test/: sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin_test.cc
macos/: sqlite3_arabic_phonetic_fuzzy_trigram_flutter.podspec
macos/Classes/: Sqlite3ArabicPhoneticFuzzyTrigramFlutterPlugin.swift
test/: sqlite3_arabic_phonetic_fuzzy_trigram_flutter_method_channel_test.dart  sqlite3_arabic_phonetic_fuzzy_trigram_flutter_test.dart
windows/: CMakeLists.txt  sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin.cpp  sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin.h  sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin_c_api.cpp
windows/include/sqlite3_arabic_phonetic_fuzzy_trigram/: sqlite3-arabic-phonetic-fuzzy-trigram.h
windows/include/sqlite3_arabic_phonetic_fuzzy_trigram_flutter/: sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin_c_api.h
windows/include/tokenizer/: sqlite3-arabic-phonetic-fuzzy-trigram.c
windows/test/: sqlite3_arabic_phonetic_fuzzy_trigram_flutter_plugin_test.cpp
